# mirovia

./: .gitignore  .gitmodules  README.md  nginx.conf
cli/: Cargo.toml  build.rs
cli/src/: cli.yaml  main.rs
dependencies/: __init__.py
docs/: 0.bootstrap.js  002_drive_alone.gf  404.html  CNAME  bootstrap.js  index.css  index.html  index_dark.css  index_light.css
docs/examples/: 000_hello_world.gf  002_drive_alone.gf
front/: Cargo.toml  README.md  bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
front/examples/: 003_high_up.gf
front/examples_flat/: 000_hello_world.gf.test  001_hello_someone.gf
front/examples_json/: 001_hello_someone.json
front/examples_test/: 001_hello_someone.test.gf
front/examples_yaml/: 000_hello_world.yaml  001_hello_someone.yaml
front/src/: lib.rs
front/src/flow/: code.rs  format.rs  mod.rs
front/src/macros/: hashmap.rs
front/src/pages/: enter.rs  forgot_credentials.rs  home.rs  mod.rs  not_found.rs  playground.rs
front/src/parts/: core.rs  debug.rs  mod.rs  top.rs  top_navigation.rs  top_tools.rs
front/static/: CNAME
mir/: Cargo.toml
mir/src/: cli.yaml  main.rs
poc/editor/: index.css  index.html  index.js
