[package]
name = "gouttelettes-front"
version = "0.1.0"
authors = ["loicbourgois"]
edition = "2018"
description = "Gouttelettes' frontend"
repository = "https://github.com/gouttelettes/gouttelettes"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
url = "2.2.2"
js-sys = "0.3.51"
serde_yaml = "0.8.17"
serde_derive = "1.0.126"
serde = { version = "1.0.126", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlFormElement',
  'HtmlParagraphElement',
  'HtmlHeadingElement',
  'HtmlAnchorElement',
  'HtmlImageElement',
  'HtmlSpanElement',
  'HtmlButtonElement',
  'HtmlLinkElement',
  'HtmlDivElement',
  'DomTokenList',
  'RequestInit',
  'Storage',
  'Location',
  'HtmlTextAreaElement',
  'Request',
  'Response',
  'Node',
  'Window',
  'RequestMode',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
